<resources>
    <string name="app_name">Pay</string>
    <string name="card_holder">Card Name</string>
    <string name="card_number">Card Number</string>
    <string name="valid_thru">Valid Thru</string>
    <string name="mm">MM</string>
    <string name="YY">YY</string>
    <string name="date_hint">MM/YY</string>
    <string name="cvv">CVV</string>
    <string name="cvv_hint">000</string>
    <string name="space">" "</string>
    <string name="default_card_no">#### #### #### ####</string>
    <string name="autgorized_signature">Authorized signature</string>
    <string name="pay">Pay</string>
</resources>
